--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,23 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1 class="logo"><a href="index.html"><img draggable="false" src="images/Logo.png"
+                    alt="figure skate logo"></a></h1>
+        <input type="checkbox" class="navToggle" id="navToggle">
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="rink.html">The Rink</a></li>
+                <li><a href="#top">Progress</a></li>
+                <li><a href="#footer">Social Media</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <label for="navToggle" class="navToggleLabel">
+            <span></span>
+        </label>
+    </header>
     <div class="backgroundWrapper">
         <div id="particles-js"></div>
     </div>
