Fixed navbar hover effect compatability with firefox

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,15 @@
 <body>
     <header>
         <h1 class="logo"><a href="index.html"><img draggable="false" src="images/Logo.png"
-                    alt="figure skate logo"></a></h1>
+                    alt="logo"></a></h1>
         <input type="checkbox" class="navToggle" id="navToggle">
         <nav>
             <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="rink.html">The Rink</a></li>
-                <li><a href="#top">Progress</a></li>
-                <li><a href="#footer">Social Media</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#top">About</a></li>
+                <li><a href="#top">Projects</a></li>
+                <li><a href="#top">Collaborations</a></li>
+                <li><a href="#footer">Misc</a></li>
+                <li><a href="#top">Contact</a></li>
             </ul>
         </nav>
         <label for="navToggle" class="navToggleLabel">
