--- a/index.html
+++ b/index.html
@@ -12,23 +12,20 @@
 <link href="main.css" rel="stylesheet"></head>
 
 <body>
-    <header id="navBar">
-        <h1 class="logo"><a href="index.html"><img draggable="false" src="https://avatars.githubusercontent.com/u/66548829?s=400&u=e0e6aff7a443618db970f021008c1446cf7cf62f&v=4" alt="logo"></a></h1>
-        <input type="checkbox" class="navToggle" id="navToggle">
-        <nav>
-            <ul>
-                <li><a href="#top">About</a></li>
-                <li><a href="#top">Projects</a></li>
-                <li><a href="#top">Collaborations</a></li>
-                <li><a href="#footer">Misc</a></li>
-                <li><a href="#top">Contact</a></li>
-            </ul>
-        </nav>
-        <label for="navToggle" class="navToggleLabel">
-            <span></span>
-            <div id="nameHeader"></div>
-        </label>
-    </header>
+    <div id="navContainer">
+        <header id="navBar">
+            <h1 class="logo"><a href="index.html"><img draggable="false" src="https://avatars.githubusercontent.com/u/66548829?s=400&u=e0e6aff7a443618db970f021008c1446cf7cf62f&v=4" alt="logo"></a></h1>
+            <nav>
+                <ul>
+                    <li><a href="#top">About</a></li>
+                    <li><a href="#top">Projects</a></li>
+                    <li><a href="#top">Collaborations</a></li>
+                    <li><a href="#footer">Misc</a></li>
+                    <li><a href="#top">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
     <div id="particles-js"></div>
     <div id="pageWrapper">
         <div id="contentBGWrapper">
