feat: reformatted navbar, added projects page

--- a/src/projects.html
+++ b/src/projects.html
@@ -17,8 +17,8 @@
             <div style="display: flex; justify-content: flex-end;">
                 <nav>
                     <ul>
-                        <li><a href="#top">About</a></li>
-                        <li><a href="./projects.html">Projects</a></li>
+                        <li><a href="./index.html">About</a></li>
+                        <li><a href="#top">Projects</a></li>
                         <li><a href="#top">Contact</a></li>
                     </ul>
                 </nav>
