--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>jvandag.github.io</title>
@@ -15,15 +14,15 @@
     <div id="navContainer">
         <header id="navBar">
             <h1 class="logo"><a href="index.html"><img draggable="false" src="https://avatars.githubusercontent.com/u/66548829?s=400&u=e0e6aff7a443618db970f021008c1446cf7cf62f&v=4" alt="logo"></a></h1>
-            <nav>
-                <ul>
-                    <li><a href="#top">About</a></li>
-                    <li><a href="#top">Projects</a></li>
-                    <li><a href="#top">Collaborations</a></li>
-                    <li><a href="#footer">Misc</a></li>
-                    <li><a href="#top">Contact</a></li>
-                </ul>
-            </nav>
+            <div style="display: flex; justify-content: flex-end;">
+                <nav>
+                    <ul>
+                        <li><a href="#top">About</a></li>
+                        <li><a href="./projects.html">Projects</a></li>
+                        <li><a href="#top">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
     </div>
     <div id="particles-js"></div>
