feat: fixed not being able to scale screen on mobile.

--- a/src/projects.html
+++ b/src/projects.html
@@ -18,7 +18,7 @@
                 <nav>
                     <ul>
                         <li><a href="./index.html">About</a></li>
-                        <li><a href="#top">Projects</a></li>
+                        <li><a href="#">Projects</a></li>
                         <li><a href="#top">Contact</a></li>
                     </ul>
                 </nav>
