--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,17 @@
 </head>
 
 <body>
-    <div id="navContainer">
-        <header id="navBar">
-            <h1 class="logo"><a href="index.html"><img draggable="false"
-                        src="https://avatars.githubusercontent.com/u/66548829?s=400&u=e0e6aff7a443618db970f021008c1446cf7cf62f&v=4"
-                        alt="logo"></a></h1>
-            <div style="display: flex; justify-content: flex-end;">
-                <nav>
-                    <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="./projects.html">Projects</a></li>
-                        <li><a href="#top">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+
+   <div id="navContainer">
+    <div id="navBar">
+        <div class="navLogo"><a href="index.html"><img draggable="false"
+            src="https://avatars.githubusercontent.com/u/66548829?s=400&u=e0e6aff7a443618db970f021008c1446cf7cf62f&v=4"
+            alt="logo"></a></div>
+        <div class="navItem"><a href="#">About</a></div>
+        <div class="navItem"><a href="./projects.html">Projects</a></div>
+        <div class="navItem"><a href="#top">Contact</a></div>
     </div>
+   </div>
     <div id="particles-js"></div>
         <div id="aboutWrapper">
             <div id="contentBGWrapper">
