--- a/index.html
+++ b/index.html
@@ -4,71 +4,41 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!-- icons -->
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/66548829">
+    <!-- metadata general -->
     <title>jvandag.github.io</title>
-    <link rel="icon"
-        href="https://avatars.githubusercontent.com/u/66548829?s=400&u=e0e6aff7a443618db970f021008c1446cf7cf62f&v=4">
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <!-- metadata opengraph -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content={title} />
+    <meta property="og:url" content={url} />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/66548829" />
 <link href="main.css" rel="stylesheet"></head>
 
 <body>
     <div id="navContainer">
-        <header id="navBar">
-            <h1 class="logo"><a href="index.html"><img draggable="false"
+        <div id="navBar">
+            <div class="navLogo"><a href="index.html"><img draggable="false"
                         src="https://avatars.githubusercontent.com/u/66548829?s=400&u=e0e6aff7a443618db970f021008c1446cf7cf62f&v=4"
-                        alt="logo"></a></h1>
-            <div style="display: flex; justify-content: flex-end;">
-                <nav>
-                    <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="./projects.html">Projects</a></li>
-                        <li><a href="#top">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+                        alt="logo"></a></div>
+            <div class="navItem"><a target="_blank" href="https://github.com/jvandag">Github</a></div>
+            <div class="navItem"><a href="./projects.html">Projects</a></div>
+            <div class="navItem"><a target="_blank" href="#top">Contact</a></div>
+        </div>
     </div>
     <div id="particles-js"></div>
-        <div id="aboutWrapper">
-            <div id="contentBGWrapper">
-                <div id="contentContainer">
-                    <p class="bionicText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet pulvinar
-                        enim. Aliquam pulvinar dapibus lectus a volutpat. Fusce iaculis risus ut quam sagittis, id
-                        gravida
-                        leo sollicitudin. Morbi lectus purus, egestas sed finibus quis, varius at nunc. Phasellus sit
-                        amet
-                        viverra felis. Maecenas vestibulum ipsum et aliquam suscipit. Sed tristique, quam at auctor
-                        congue,
-                        lorem magna blandit nisi, sit amet tincidunt felis purus id metus. Class aptent taciti sociosqu
-                        ad
-                        litora torquent per conubia nostra, per inceptos himenaeos. Orci varius natoque penatibus et
-                        magnis
-                        dis parturient montes, nascetur ridiculus mus. Aliquam vestibulum bibendum ante, sed viverra
-                        quam.
-                        Vivamus nec aliquam ipsum.
-
-                        Curabitur tempus, eros ut aliquam lobortis, metus eros mollis quam, eu fringilla justo lectus
-                        vitae
-                        nisl. Sed orci nunc, molestie nec nisl id, fringilla aliquet arcu. Duis tempor enim ut dui
-                        efficitur, non mattis est finibus. Donec fermentum luctus nibh sed ornare. Mauris augue lacus,
-                        rutrum et iaculis venenatis, rutrum vel neque. Morbi arcu mi, placerat id ex ut, viverra blandit
-                        eros. Curabitur bibendum, risus nec egestas lacinia, ligula tellus dapibus quam, sed sagittis
-                        turpis
-                        enim vitae lorem.
-
-                        Cras volutpat erat sit amet neque iaculis, a tincidunt nunc cursus. Donec quis elit augue. Donec
-                        fermentum aliquet lacus at vehicula. Nunc erat lectus, viverra id volutpat at, cursus sit amet
-                        nisi.
-                        Donec nec efficitur massa. In in tincidunt nibh, ut volutpat odio. Donec lorem leo, semper sed
-                        metus
-                        nec, condimentum rutrum velit. Suspendisse potenti. Nam nec dui ex. Etiam vel faucibus risus.
-                        Donec
-                        tempor nec nulla vitae iaculis. Pellentesque fermentum nec libero vel tempus. Aenean nec
-                        sagittis
-                        felis, non consectetur tellus. Duis rutrum sapien quis suscipit hendrerit.</p>
-                </div>
+    <div id="aboutWrapper">
+        <div id="contentBGWrapper">
+            <div id="contentContainer">
+                <p class="bionicText"   >
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet pulvinar enim. Aliquam pulvinar dapibus lectus a volutpat. Fusce iaculis risus ut quam sagittis, id gravida leo sollicitudin. Morbi lectus purus, egestas sed finibus quis, varius at nunc. Phasellus sit amet viverra felis. Maecenas vestibulum ipsum et aliquam suscipit. Sed tristique, quam at auctor congue, lorem magna blandit nisi, sit amet tincidunt felis purus id metus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam vestibulum bibendum ante, sed viverra quam. Vivamus nec aliquam ipsum. Curabitur tempus, eros ut aliquam lobortis, metus eros mollis quam, eu fringilla justo lectus vitae nisl. Sed orci nunc, molestie nec nisl id, fringilla aliquet arcu. Duis tempor enim ut dui efficitur, non mattis est finibus.
+                </p>
             </div>
         </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
