--- a/projects.html
+++ b/projects.html
@@ -4,26 +4,30 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!-- icons -->
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/66548829">
+    <!-- metadata general -->
     <title>jvandag.github.io</title>
-    <link rel="icon" href="https://avatars.githubusercontent.com/u/66548829?s=400&u=e0e6aff7a443618db970f021008c1446cf7cf62f&v=4">
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <!-- metadata opengraph -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content={title} />
+    <meta property="og:url" content={url} />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/66548829" />
 <link href="main.css" rel="stylesheet"></head>
 
 <body>
     <div id="navContainer">
-        <header id="navBar">
-            <h1 class="logo"><a href="index.html"><img draggable="false" src="https://avatars.githubusercontent.com/u/66548829?s=400&u=e0e6aff7a443618db970f021008c1446cf7cf62f&v=4" alt="logo"></a></h1>
-            <div style="display: flex; justify-content: flex-end;">
-                <nav>
-                    <ul>
-                        <li><a href="./index.html">About</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#top">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+        <div id="navBar">
+            <div class="navLogo"><a href="index.html"><img draggable="false"
+                        src="https://avatars.githubusercontent.com/u/66548829?s=400&u=e0e6aff7a443618db970f021008c1446cf7cf62f&v=4"
+                        alt="logo"></a></div>
+            <div class="navItem"><a target="_blank" href="https://github.com/jvandag">Github</a></div>
+            <div class="navItem"><a href="./projects.html">Projects</a></div>
+            <div class="navItem"><a target="_blank" href="#">Contact</a></div>
+        </div>
     </div>
     <div id="particles-js"></div>
     <div id="pageWrapper">
