--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- icons -->
-    <divnk rel="icon" href="https://avatars.githubusercontent.com/u/66548829">
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/66548829" />
     <!-- metadata general -->
     <title>jvandag.github.io</title>
     <meta name="robots" content="index, follow" />
@@ -22,8 +22,7 @@
     <div id="navContainer">
         <div id="navBar">
             <div class="navLogo"><a href="index.html"><img draggable="false"
-                        src="https://avatars.githubusercontent.com/u/66548829"
-                        alt="logo"></a></div>
+                        src="https://avatars.githubusercontent.com/u/66548829" alt="logo"></a></div>
             <div class="navItem"><a target="_blank" href="https://github.com/jvandag">Github</a></div>
             <div class="navItem"><a href="./projects.html">Projects</a></div>
             <div class="navItem"><a target="_blank" href="#top">Contact</a></div>
@@ -31,36 +30,35 @@
     </div>
     <div id="particles-js"></div>
     <div id="aboutWrapper">
-            <div id="contentContainer">
-               <article class="mediaSection aboutTile">
-                <div class="mSecMedia">
-                    <img src="https://avatars.githubusercontent.com/u/66548829" alt="">
+        <div id="contentContainer">
+           <article id="aboutTile" class="mediaSection">
+            <div class="mSecMedia">
+                <img src="https://avatars.githubusercontent.com/u/66548829" alt="">
+            </div>
+            <div class="mSecContent">
+                <div class="mSecText">
+                    <header class="mSecHeader">Hello, I'm Jeremiah.</header>
+                    <p class="">
+                        I am software developer with an strong interest in bio-electric and neural signal processing.
+                        I am currently pursuing an undergraduate degree in computer engineering at Portland State University.
+                        You can check out some of my projects here or view the code for my public repositories on GitHub.
+                    </p>
                 </div>
-                <div class="mSecContent">
-                    <div class="mSecText">
-                        <header class="mSecHeader">Hello, I'm Jeremiah</header>
-                        <p class="">
-                            I'm software developer with an interest in in bio-electric and neural signal processing.
-                            I'm currently pursuing my undergraduate degree in computer engineering at Portland State University.
-                            You can check out some of my projects here or view the code for my public repositories on github.
-                
-                        </p>
-                    </div>
-                    <div class="mSecFooter">
-                            <a class="github-icon aboutFooterIcon" href="https://github.com/jvandag" target="_blank">
-                                <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
-                            </a>
-                            <a class="linkedin-icon aboutFooterIcon" href="https://www.linkedin.com/in/jeremiah-vandagrift-4ab2b3194/" target="_blank">
-                                <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>LinkedIn</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
-                            </a>
-                            <a class="mail-icon aboutFooterIcon" href="mailto:pleasedontcontactme@gmail.com" target="_blank">
-                                <svg viewBox="0 0 24.00 24.00" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#000000" stroke-width="0.00024000000000000003"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.4800000000000001"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M3.75 5.25L3 6V18L3.75 18.75H20.25L21 18V6L20.25 5.25H3.75ZM4.5 7.6955V17.25H19.5V7.69525L11.9999 14.5136L4.5 7.6955ZM18.3099 6.75H5.68986L11.9999 12.4864L18.3099 6.75Z" fill="#000000"></path> </g></svg>
-                            </a>
-                    </div>
+                <div class="mSecFooter">
+                        <a class="github-icon aboutFooterIcon" href="https://github.com/jvandag" target="_blank">
+                            <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
+                        </a>
+                        <a class="linkedin-icon aboutFooterIcon" href="https://www.linkedin.com/in/jeremiah-vandagrift-4ab2b3194/" target="_blank">
+                            <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>LinkedIn</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+                        </a>
+                        <a class="mail-icon aboutFooterIcon" href="mailto:pleasedontcontactme@gmail.com" target="_blank">
+                            <svg viewBox="0 0 24.00 24.00" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#000000" stroke-width="0.00024000000000000003"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.4800000000000001"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M3.75 5.25L3 6V18L3.75 18.75H20.25L21 18V6L20.25 5.25H3.75ZM4.5 7.6955V17.25H19.5V7.69525L11.9999 14.5136L4.5 7.6955ZM18.3099 6.75H5.68986L11.9999 12.4864L18.3099 6.75Z" fill="#000000"></path> </g></svg>
+                        </a>
                 </div>
-               </div>
-            </article>
-    </div>  
+            </div>
+           </div>
+        </article>
+</div>  
 <script defer src="main.bundle.js"></script></body>
 
 </html>
