--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="particles-js"></div>
     <div id="aboutWrapper">
         <div id="contentContainer">
-           <article id="aboutTile" class="mediaSection">
+           <article id="aboutTile" class="mediaSection fadeInUp-animation">
             <div class="mSecMedia">
                 <img src="https://avatars.githubusercontent.com/u/66548829" alt="">
             </div>
