--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         src="https://avatars.githubusercontent.com/u/66548829" alt="logo"></a></div>
             <div class="navItem"><a target="_blank" href="https://github.com/jvandag">Github</a></div>
             <div class="navItem"><a href="./projects.html">Projects</a></div>
-            <div class="navItem"><a target="_blank" href="#top">Contact</a></div>
+            <div class="navItem"><a target="_blank" href="./contact.html">Contact</a></div>
         </div>
     </div>
     <div id="particles-js"></div>
