--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
                         src="https://avatars.githubusercontent.com/u/66548829" alt="logo"></a></div>
             <div class="navItem"><a target="_blank" href="https://github.com/jvandag">Github</a></div>
             <div class="navItem"><a href="./projects.html">Projects</a></div>
-            <div class="navItem"><a target="_blank" href="#">Contact</a></div>
+            <div class="navItem"><a target="_blank" href="https://forms.gle/FDKKY8wQJcnFan6z5">Contact</a></div>
         </div>
     </div>
     <div id="particles-js"></div>
