--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         src="https://avatars.githubusercontent.com/u/66548829" alt="logo"></a></div>
             <div class="navItem"><a target="_blank" href="https://github.com/jvandag">Github</a></div>
             <div class="navItem"><a href="./projects.html">Projects</a></div>
-            <div class="navItem"><a target="_blank" href="./contact.html">Contact</a></div>
+            <div class="navItem"><a target="_blank" href="https://forms.gle/FDKKY8wQJcnFan6z5">Contact</a></div>
         </div>
     </div>
     <div id="particles-js"></div>
@@ -51,7 +51,7 @@
                         <a class="linkedin-icon aboutFooterIcon" href="https://www.linkedin.com/in/jeremiah-vandagrift-4ab2b3194/" target="_blank">
                             <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>LinkedIn</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
                         </a>
-                        <a class="mail-icon aboutFooterIcon" href="mailto:pleasedontcontactme@gmail.com" target="_blank">
+                        <a class="mail-icon aboutFooterIcon" href="https://forms.gle/FDKKY8wQJcnFan6z5" target="_blank">
                             <svg viewBox="0 0 24.00 24.00" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#000000" stroke-width="0.00024000000000000003"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.4800000000000001"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M3.75 5.25L3 6V18L3.75 18.75H20.25L21 18V6L20.25 5.25H3.75ZM4.5 7.6955V17.25H19.5V7.69525L11.9999 14.5136L4.5 7.6955ZM18.3099 6.75H5.68986L11.9999 12.4864L18.3099 6.75Z" fill="#000000"></path> </g></svg>
                         </a>
                 </div>
