Adjusted spacing for about tile

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <div id="navContainer">
         <div id="navBar">
             <div class="navLogo"><a href="index.html"><img draggable="false"
-                        src="https://avatars.githubusercontent.com/u/66548829" alt="logo"></a></div>
+                        src="https://avatars.githubusercontent.com/u/66548829" alt="home icon"></a></div>
             <div class="navItem"><a rel="noopener noreferer" target="_blank" href="https://github.com/jvandag">Github</a></div>
             <div class="navItem"><a rel="noopener noreferer" href="./projects.html">Projects</a></div>
             <div class="navItem"><a rel="noopener noreferer" target="_blank" href="https://forms.gle/FDKKY8wQJcnFan6z5">Contact</a></div>
